Sketch ideas for other stuff

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 	<meta charset="utf-8" />
 	<title>Dolphin Obsession</title>
 	<link rel="stylesheet" href="/css/main.css" />
+	<link rel="icon" href="/img/logo.png" />
   </head>
   <body>
+	<h1>Welcome to Dolphin Obsession</h1>
 	<header>
 	  <nav>
+		<ul>
+		  <li><a href="/index.html">Home</a></li>
+		  <li><a href="/blog/index.html">Blog</a></li>
+		  <li><a href="/dumpleoftheday.html">Dumple of the Day</a></li>
+		</ul>
 	  </nav>
 	</header>
-	<h1>Welcome to Dolphin Obsession</h1>
+
+	<img src="/img/logo.png" alt="The website logo, a picture of Willie" />
+
 	<h2>What is this place?</h2>
 	<p>
 	  This website is the successor to <i>Dolphin Obsession</i>, a Neopets guild that the
@@ -40,10 +49,6 @@
 	</p>
 
 	<footer>
-	  <ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="/dumpleoftheday.html">Dumple of the Day</a></li>
-	  </ul>
 	  &copy; 2024 All Rights Reserved.
 	</footer>
   </body>  
