--- a/dumpleoftheday.html
+++ b/dumpleoftheday.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 	<meta charset="utf-8" />
 	<title>Dumple of the Day</title>
 	<link rel="stylesheet" href="/css/main.css" />
+	<link rel="icon" href="/img/logo.png" />
   </head>
   <body>
 	<h1>Dumple of the Day</h1>
+	<header>
+	  <nav>
+		<a href="/index.html">Back Home</a>
+	  </nav>
+	</header>
+
 	<p>
 	  This page displays a selected picture that rotates daily, powered by the
 	  <a href="https://github.com/vnelee/dumpleoftheday">DumpleOfTheDay API</a>.
@@ -75,10 +82,6 @@
 	</script>
 	
 	<footer>
-	  <ul>
-		<li><a href="/index.html">Home</a></li>
-		<li><a href="/dumpleoftheday.html">Dumple of the Day</a></li>
-	  </ul>
 	  &copy; 2024 All Rights Reserved.
 	</footer>
   </body>  
