--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<ul>
 		  <li><a href="/index.html">Home</a></li>
 		  <li><a href="/blog/index.html">Blog</a></li>
+		  <li><a href="/characters/index.html">Characters</a></li>
 		  <li><a href="/dumpleoftheday.html">Dumple of the Day</a></li>
 		</ul>
 	  </nav>
