--- a/index.html
+++ b/index.html
@@ -19,35 +19,37 @@
 	  </nav>
 	</header>
 
-	<img src="/img/logo.png" alt="The website logo, a picture of Willie" />
+	<main>
+	  <img src="/img/logo.png" alt="The website logo, a picture of Willie" />
 
-	<h2>What is this place?</h2>
-	<p>
-	  This website is the successor to <i>Dolphin Obsession</i>, a Neopets guild that the
-	  administrators used to run in their childhood. You may also see the site referred to
-	  as "Dumple and Friends", which is the handle for our
-	  <a href="https://www.instagram.com/dumpleandfriends/">Instagram</a>
-	  and <a href="https://www.threads.net/@dumpleandfriends">Threads</a> accounts.
-	  
-	  The goal is to introduce and showcase the many adorable dolphin and other marine
-	  animals that are part of our family, host their blog posts, and perhaps other fun
-	  side projects that we think of.
-	</p>
+	  <h2>What is this place?</h2>
+	  <p>
+		This website is the successor to <i>Dolphin Obsession</i>, a Neopets guild that the
+		administrators used to run in their childhood. You may also see the site referred to
+		as "Dumple and Friends", which is the handle for our
+		<a href="https://www.instagram.com/dumpleandfriends/">Instagram</a>
+		and <a href="https://www.threads.net/@dumpleandfriends">Threads</a> accounts.
+		
+		The goal is to introduce and showcase the many adorable dolphin and other marine
+		animals that are part of our family, host their blog posts, and perhaps other fun
+		side projects that we think of.
+	  </p>
 
-	<h2>Why does it look like this?</h2>
+	  <h2>Why does it look like this?</h2>
 
-	<p>
-	  This site is built completely manually using HTML, CSS, and minimal amounts of
-	  JavaScript where necessary. The reason for this is because back in the day of
-	  Neopets guilds, raw HTML was all we had to use. In an era of bloated webpages and
-	  megabytes of JavaScript, we hope this site is a refreshing return to a more
-	  imaginative, innocent, and genuine internet.
-	</p>
+	  <p>
+		This site is built completely manually using HTML, CSS, and minimal amounts of
+		JavaScript where necessary. The reason for this is because back in the day of
+		Neopets guilds, raw HTML was all we had to use. In an era of bloated webpages and
+		megabytes of JavaScript, we hope this site is a refreshing return to a more
+		imaginative, innocent, and genuine internet.
+	  </p>
 
-	<p>
-	  Do note that the site administrators are not frontend experts, so the styling of the
-	  site can be considered to be an eternal work-in-progress.
-	</p>
+	  <p>
+		Do note that the site administrators are not frontend experts, so the styling of the
+		site can be considered to be an eternal work-in-progress.
+	  </p>
+	</main>
 
 	<footer>
 	  &copy; 2024 All Rights Reserved.
