Make nav slightly less ugly

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
 	<title>Dolphin Obsession</title>
 	<link rel="stylesheet" href="/css/main.css" />
 	<link rel="icon" href="/img/logo.png" />
+	<style>
+	  nav {
+		  ul {
+			  padding-left: 0px;
+		  }
+		  li {
+			  display: inline flow-root;
+			  list-style-type: none;
+			  margin: 0px 10px;
+		  }
+	  }
+	</style>
   </head>
   <body>
-	<h1>Welcome to Dolphin Obsession</h1>
 	<header>
+	  <h1>Welcome to Dolphin Obsession</h1>
 	  <nav>
 		<ul>
 		  <li><a href="/index.html">Home</a></li>
