Add char pages for dumple, jun, bolobao, update willie page

--- a/characters/index.html
+++ b/characters/index.html
@@ -26,6 +26,9 @@
 	  <article>
 		<ul>
 		  <li><a href="./willie.html">Willie</a></li>
+		  <li><a href="./dumple.html">Dumple Ling</a></li>
+		  <li><a href="./jun.html">Dumpling Junior (Jun)</a></li>
+		  <li><a href="./bolobao.html">Bolobao</a></li>
 		</ul>
 	  </article>
 	</main>
