--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
 	<main>
 	  <img src="/img/logo.png" alt="The website logo, a picture of Willie" />
+	  <img src="/img/dumple.jpg"
+		   width="250px"
+		   alt="A picture of Dumple, the site's other mascot" />
 
 	  <h2>What is this place?</h2>
 	  <p>
