Add birthday post

--- a/characters/dumple.html
+++ b/characters/dumple.html
@@ -37,8 +37,13 @@
 		</p>
 
 		<p>
+		  Dumple is married to Debbie, his childhood friend, and together they had
+		  four children: Icee, Skype, Dumpling Junior, and Dorth Vader.
+		</p>
+
+		<p>
 		  After Dumple's death (from choking on a dumpling), he became a ghost that
-		  wandered Dolphin World. Ghosts were supposed to perform good deeds to escape
+		  wandered Dolphin World. Ghosts are supposed to perform good deeds to escape
 		  their purgatorical status and ascend to Dolphin Heaven. However, because of
 		  Dumple's insatiable appetite, he often became distracted by finding more meat
 		  dumplings, so it took him longer than expected to return to heaven, much to his
