--- a/characters/willie.html
+++ b/characters/willie.html
@@ -14,7 +14,10 @@
 	  </nav>
 	</header>
 
-	<main>	  
+	<main>
+	  <img src="/img/logo.png"
+		   alt="Willie when he was younger"
+		   width="250px" />
 	  <section>
 		<h2>Bio</h2>
 		<p>
