--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 	</header>
 
 	<main>
+	  <img src="/img/smallanimals.png"
+		   alt="beanbag, baby shark, bolobao, willie, and dorothy all in a row" />
+	  <br />
 	  <img src="/img/logo.png" alt="The website logo, a picture of Willie" />
 	  <img src="/img/dumple.jpg"
 		   width="250px"
